--- a/build.gradle
+++ b/build.gradle
@@ -5,6 +5,7 @@ buildscript {
         version_core = "1.3.1"
         version_gradle= '4.2.2'
         version_constraint_layout = "2.0.0-rc1"
+        version_retrofit_coroutines_adapter = "0.9.2"
         version_lifecycle_extensions = "2.2.0"
         version_coroutine = "1.3.7"
         version_lifecycle= "2.2.0"
